--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.0",
@@ -20,11 +21,14 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
+    "react-native-date-picker": "^5.0.7",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-magnus": "^1.0.63",
     "react-native-maps": "1.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
