--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
@@ -22,10 +23,12 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-date-picker": "^5.0.7",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-image-viewing": "^0.2.2",
     "react-native-magnus": "^1.0.63",
     "react-native-maps": "1.14.0",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-ui-datepicker": "^2.0.4",
